Fix margin on bubble-wrap ul element

--- a/source/stylesheets/timesheet.sass
+++ b/source/stylesheets/timesheet.sass
@@ -145,6 +145,7 @@
   .tsa-bubbles-wrapper
     position: relative
     height: 25px
+    margin: 0
 
     > li
       display: block
